# onyx-i62hd-graffiti

./: CMakeLists.txt  LICENSE  README.md  UML.dia  onyx-i62hd-graffiti.pro
cmake_modules/: mymacro.cmake
src/: CMakeLists.txt  main.cpp  mwo_application.cpp  mwo_application.h  mwo_mainwindow.cpp  mwo_mainwindow.h  test-sdl.c
src/mwolib/: CMakeLists.txt  graffiti_hui.cpp  graffiti_hui.h
